file/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: main-f
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main-f
  template:
    metadata:
      labels:
        app: main-f
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: fe-svc
spec:
  ports:
    - name: web-f
      port: 80
  selector:
    app: main-f
