file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: be-svc
            port:
              number: 80
